style.css
.title{
    font-family: Helvetica, Arial, sans-serif;
    color: white;
}

body{
    background-color: rgb(15, 15, 15);
    scroll-behavior: smooth;
}

#frijoles{
    cursor: pointer;
}

#gitano{
    cursor: pointer;
}

.canvas-container {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh; 
    border: 2px solid wheat;
}

#gameCanvas{
    border: 5px solid white;
    border-radius: 10px;
    background-color: darkslateblue;
}

